// Original file: gRPC/HBFTest.proto


export interface pingResponse {
  'msg'?: (string);
  'srcIp'?: (string);
  'srcPort'?: (string);
  'dstIp'?: (string);
  'dstPort'?: (string);
  'protocol'?: (string);
}

export interface pingResponse__Output {
  'msg'?: (string);
  'srcIp'?: (string);
  'srcPort'?: (string);
  'dstIp'?: (string);
  'dstPort'?: (string);
  'protocol'?: (string);
}
